Remove VAT number from footer in privacy.html

--- a/privacy.html
+++ b/privacy.html
@@ -114,7 +114,7 @@
     <footer class="footer">
         <div class="container">
             <div class="footer-bottom" style="border-top: none;">
-                <p><a href="index.html" style="color: var(--yellow); text-decoration: underline;">Torna alla Home</a> | P.IVA 00000000000</p>
+                <p><a href="index.html" style="color: var(--yellow); text-decoration: underline;">Torna alla Home</a></p>
                 <p>Copyright © 2025 Marisa Albertini</p>
             </div>
         </div>
